fix config add ProfileRepositoryTest